--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,25 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Levenshtein'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-7b32fc97cded>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpairwise\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmanhattan_distances\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mLevenshtein\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Levenshtein'"
      ]
     }
    ],
@@ -28,7 +21,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sys\n",
-    "from sklearn.metrics.pairwise import manhattan_distances"
+    "from sklearn.metrics.pairwise import manhattan_distances\n",
+    "import Levenshtein"
    ]
   },
   {
@@ -229,30 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 1, 1, 1]\n",
-      "[0, 1, 1, 1, 1, 2, 2]\n",
-      "[0, 1, 1, 2, 2, 2, 2]\n",
-      "[0, 1, 1, 2, 2, 3, 3]\n",
-      "[0, 1, 2, 2, 2, 3, 3]\n",
-      "[0, 1, 2, 2, 3, 3, 4]\n",
-      "[0, 1, 2, 2, 3, 4, 4]\n",
-      "\n",
-      "[0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 'up', 'up', 'up', 'ok', 'left', 'ok']\n",
-      "[0, 'ok', 'left', 'left', 'up', 'ok', 'left']\n",
-      "[0, 'up', 'up', 'ok', 'left', 'up', 'up']\n",
-      "[0, 'ok', 'up', 'up', 'up', 'ok', 'left']\n",
-      "[0, 'up', 'ok', 'up', 'up', 'up', 'up']\n",
-      "[0, 'up', 'up', 'up', 'ok', 'up', 'ok']\n",
-      "[0, 'ok', 'up', 'up', 'up', 'ok', 'up']\n",
       "\n",
       "BCBA\n"
      ]
@@ -291,11 +268,11 @@
     "a='ABCBDAB'\n",
     "b='BDCABA'\n",
     "c,flag=lcs(a,b)\n",
-    "for i in c:\n",
-    "  print(i)\n",
-    "print('')\n",
-    "for j in flag:\n",
-    "  print(j)\n",
+    "#for i in c:\n",
+    "#  print(i)\n",
+    "#print('')\n",
+    "#for j in flag:\n",
+    "#  print(j)\n",
     "print('')\n",
     "printLcs(flag,a,len(a),len(b))\n",
     "print('')"
@@ -340,6 +317,36 @@
     "X=[1,2,3,4]\n",
     "Y=[1,2,7,4,5]\n",
     "dtw(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "[[11511.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def edit_distance(str1, str2):\n",
+    "    matrix = [[i+j for j in range(len(str2) + 1)] for i in range(len(str1) + 1)]\n",
+    "    for i in range(1,len(str1)+1):\n",
+    "        for j in range(1,len(str2)+1):\n",
+    "            if str1[i-1] == str2[j-1]:\n",
+    "                d = 0\n",
+    "            else:\n",
+    "                d = 1\n",
+    "            matrix[i][j] = min(matrix[i-1][j]+1,matrix[i][j-1]+1,matrix[i-1][j-1]+d)\n",
+    "    return matrix[len(str1)][len(str2)]\n",
+    "\n",
+    "print(edit_distance('1234','12745'))\n",
+    "print(manhattan_distances('1234','12745'))"
    ]
   }
  ],
