add pre_data and k-gram

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Levenshtein'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-7b32fc97cded>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpairwise\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmanhattan_distances\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mLevenshtein\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Levenshtein'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
      ]
     }
    ],
@@ -21,8 +28,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sys\n",
-    "from sklearn.metrics.pairwise import manhattan_distances\n",
-    "import Levenshtein"
+    "from sklearn.metrics.pairwise import manhattan_distances"
    ]
   },
   {
@@ -31,7 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f=open('/Users/iamlira/Downloads/IOTest2.txt')"
+    "f=open('/Users/iamlira/Downloads/IOTest2.txt')\n",
+    "data=f.read().splitlines()\n",
+    "data_seq=[]\n",
+    "for tmp in data:\n",
+    "    d=tmp.split(' ')\n",
+    "    d.remove('')\n",
+    "    data_seq.append(d)"
    ]
   },
   {
@@ -43,187 +55,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AddPou  2018/9/4 21:46:19\n",
-      "\n",
-      "choose_start  2018/9/4 21:46:45\n",
-      "\n",
-      "choose_end  2018/9/4 21:46:46\n",
-      "\n",
-      "choose_start  2018/9/4 21:47:05\n",
-      "\n",
-      "choose_end  2018/9/4 21:47:07\n",
-      "\n",
-      "choose_start  2018/9/4 21:47:11\n",
-      "\n",
-      "choose_end  2018/9/4 21:47:12\n",
-      "\n",
-      "choose_start  2018/9/4 21:47:16\n",
-      "\n",
-      "choose_end  2018/9/4 21:47:17\n",
-      "\n",
-      "choose_start  2018/9/4 21:47:23\n",
-      "\n",
-      "choose_end  2018/9/4 21:47:24\n",
-      "\n",
-      "choose_start  2018/9/4 21:47:28\n",
-      "\n",
-      "choose_end  2018/9/4 21:47:29\n",
-      "\n",
-      "choose_start  2018/9/4 21:47:35\n",
-      "\n",
-      "choose_end  2018/9/4 21:47:36\n",
-      "\n",
-      "choose_start  2018/9/4 21:47:43\n",
-      "\n",
-      "choose_end  2018/9/4 21:47:44\n",
-      "\n",
-      "choose_start  2018/9/4 21:47:52\n",
-      "\n",
-      "choose_end  2018/9/4 21:47:54\n",
-      "\n",
-      "move_start  2018/9/4 21:48:22\n",
-      "\n",
-      "connect  2018/9/4 21:48:22\n",
-      "\n",
-      "move_end  2018/9/4 21:48:22\n",
-      "\n",
-      "move_start  2018/9/4 21:48:23\n",
-      "\n",
-      "connect  2018/9/4 21:48:23\n",
-      "\n",
-      "move_end  2018/9/4 21:48:23\n",
-      "\n",
-      "move_start  2018/9/4 21:48:24\n",
-      "\n",
-      "connect  2018/9/4 21:48:24\n",
-      "\n",
-      "move_end  2018/9/4 21:48:24\n",
-      "\n",
-      "move_start  2018/9/4 21:48:25\n",
-      "\n",
-      "connect  2018/9/4 21:48:26\n",
-      "\n",
-      "move_end  2018/9/4 21:48:26\n",
-      "\n",
-      "move_start  2018/9/4 21:48:27\n",
-      "\n",
-      "connect  2018/9/4 21:48:27\n",
-      "\n",
-      "move_end  2018/9/4 21:48:27\n",
-      "\n",
-      "move_start  2018/9/4 21:48:28\n",
-      "\n",
-      "connect  2018/9/4 21:48:28\n",
-      "\n",
-      "move_end  2018/9/4 21:48:28\n",
-      "\n",
-      "move_start  2018/9/4 21:48:30\n",
-      "\n",
-      "connect  2018/9/4 21:48:31\n",
-      "\n",
-      "move_end  2018/9/4 21:48:31\n",
-      "\n",
-      "move_start  2018/9/4 21:48:31\n",
-      "\n",
-      "connect  2018/9/4 21:48:31\n",
-      "\n",
-      "move_end  2018/9/4 21:48:31\n",
-      "\n",
-      "move_start  2018/9/4 21:48:32\n",
-      "\n",
-      "connect  2018/9/4 21:48:32\n",
-      "\n",
-      "move_end  2018/9/4 21:48:32\n",
-      "\n",
-      "move_start  2018/9/4 21:48:35\n",
-      "\n",
-      "connect  2018/9/4 21:48:35\n",
-      "\n",
-      "move_end  2018/9/4 21:48:35\n",
-      "\n",
-      "move_start  2018/9/4 21:48:36\n",
-      "\n",
-      "connect  2018/9/4 21:48:36\n",
-      "\n",
-      "move_end  2018/9/4 21:48:36\n",
-      "\n",
-      "move_start  2018/9/4 21:48:46\n",
-      "\n",
-      "move_end  2018/9/4 21:48:46\n",
-      "\n",
-      "move_end  2018/9/4 21:48:46\n",
-      "\n",
-      "assign  2018/9/4 21:48:46\n",
-      "\n",
-      "move_start  2018/9/4 21:49:01\n",
-      "\n",
-      "move_end  2018/9/4 21:49:01\n",
-      "\n",
-      "move_end  2018/9/4 21:49:02\n",
-      "\n",
-      "assign  2018/9/4 21:49:02\n",
-      "\n",
-      "move_start  2018/9/4 21:49:37\n",
-      "\n",
-      "move_end  2018/9/4 21:49:38\n",
-      "\n",
-      "move_start  2018/9/4 21:49:39\n",
-      "\n",
-      "move_end  2018/9/4 21:49:39\n",
-      "\n",
-      "move_end  2018/9/4 21:49:39\n",
-      "\n",
-      "assign  2018/9/4 21:49:39\n",
-      "\n",
-      "move_start  2018/9/4 21:49:44\n",
-      "\n",
-      "move_end  2018/9/4 21:49:44\n",
-      "\n",
-      "move_end  2018/9/4 21:49:44\n",
-      "\n",
-      "assign  2018/9/4 21:49:44\n",
-      "\n",
-      "move_start  2018/9/4 21:49:47\n",
-      "\n",
-      "move_end  2018/9/4 21:49:47\n",
-      "\n",
-      "move_start  2018/9/4 21:49:48\n",
-      "\n",
-      "move_end  2018/9/4 21:49:48\n",
-      "\n",
-      "move_end  2018/9/4 21:49:48\n",
-      "\n",
-      "assign  2018/9/4 21:49:49\n",
-      "\n",
-      "move_start  2018/9/4 21:49:51\n",
-      "\n",
-      "move_end  2018/9/4 21:49:51\n",
-      "\n",
-      "move_end  2018/9/4 21:49:51\n",
-      "\n",
-      "assign  2018/9/4 21:49:51\n",
-      "\n",
-      "move_start  2018/9/4 21:49:55\n",
-      "\n",
-      "move_end  2018/9/4 21:49:55\n",
-      "\n",
-      "move_end  2018/9/4 21:49:56\n",
-      "\n",
-      "assign  2018/9/4 21:49:56\n",
-      "\n",
-      "SaveProject  2018/9/4 21:50:39\n",
-      "\n"
+      "['AddPou', '2018/9/4', '21:46:19']\n",
+      "['choose_start', '2018/9/4', '21:46:45']\n",
+      "['choose_end', '2018/9/4', '21:46:46']\n",
+      "['choose_start', '2018/9/4', '21:47:05']\n",
+      "['choose_end', '2018/9/4', '21:47:07']\n",
+      "['choose_start', '2018/9/4', '21:47:11']\n",
+      "['choose_end', '2018/9/4', '21:47:12']\n",
+      "['choose_start', '2018/9/4', '21:47:16']\n",
+      "['choose_end', '2018/9/4', '21:47:17']\n",
+      "['choose_start', '2018/9/4', '21:47:23']\n",
+      "['choose_end', '2018/9/4', '21:47:24']\n",
+      "['choose_start', '2018/9/4', '21:47:28']\n",
+      "['choose_end', '2018/9/4', '21:47:29']\n",
+      "['choose_start', '2018/9/4', '21:47:35']\n",
+      "['choose_end', '2018/9/4', '21:47:36']\n",
+      "['choose_start', '2018/9/4', '21:47:43']\n",
+      "['choose_end', '2018/9/4', '21:47:44']\n",
+      "['choose_start', '2018/9/4', '21:47:52']\n",
+      "['choose_end', '2018/9/4', '21:47:54']\n",
+      "['connect', '2018/9/4', '21:48:22']\n",
+      "['connect', '2018/9/4', '21:48:23']\n",
+      "['connect', '2018/9/4', '21:48:24']\n",
+      "['connect', '2018/9/4', '21:48:26']\n",
+      "['connect', '2018/9/4', '21:48:27']\n",
+      "['connect', '2018/9/4', '21:48:28']\n",
+      "['connect', '2018/9/4', '21:48:31']\n",
+      "['connect', '2018/9/4', '21:48:31']\n",
+      "['connect', '2018/9/4', '21:48:32']\n",
+      "['connect', '2018/9/4', '21:48:35']\n",
+      "['connect', '2018/9/4', '21:48:36']\n",
+      "['assign', '2018/9/4', '21:48:46']\n",
+      "['assign', '2018/9/4', '21:49:02']\n",
+      "['move_start', '2018/9/4', '21:49:37']\n",
+      "['move_end', '2018/9/4', '21:49:38']\n",
+      "['assign', '2018/9/4', '21:49:39']\n",
+      "['assign', '2018/9/4', '21:49:44']\n",
+      "['move_start', '2018/9/4', '21:49:47']\n",
+      "['move_end', '2018/9/4', '21:49:47']\n",
+      "['assign', '2018/9/4', '21:49:49']\n",
+      "['assign', '2018/9/4', '21:49:51']\n",
+      "['assign', '2018/9/4', '21:49:56']\n",
+      "['SaveProject', '2018/9/4', '21:50:39']\n"
      ]
     }
    ],
    "source": [
-    "for tmp in f.readlines():\n",
-    "    print(tmp)"
+    "def pre_data(data):\n",
+    "    n=len(data)\n",
+    "    i=0\n",
+    "    while i<n:\n",
+    "        if(data[i][0]=='connect'):\n",
+    "            if(data[i-1][0]=='move_start'):\n",
+    "                del(data[i-1])\n",
+    "                i=i-1\n",
+    "                n=len(data)\n",
+    "                continue\n",
+    "            if(data[i+1][0]=='move_end'):\n",
+    "                del(data[i+1])\n",
+    "                n=len(data)\n",
+    "                continue\n",
+    "        if(data[i][0]=='assign'):\n",
+    "            if(data[i-1][0]=='move_end' and data[i-2][0]=='move_end' and data[i-3][0]=='move_start'):\n",
+    "                del(data[i-1])\n",
+    "                del(data[i-2])\n",
+    "                del(data[i-3])\n",
+    "                i=i-2\n",
+    "                n=len(data)\n",
+    "                continue\n",
+    "        n=len(data)\n",
+    "        i=i+1\n",
+    "    \n",
+    "pre_data(data_seq)\n",
+    "for s in data_seq:\n",
+    "    print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -347,6 +257,42 @@
     "\n",
     "print(edit_distance('1234','12745'))\n",
     "print(manhattan_distances('1234','12745'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def k_gram(seq,k):\n",
+    "    kgram=set()\n",
+    "    n=len(seq)\n",
+    "    for i in range(n-k+1):\n",
+    "        kgram.add(tuple(seq[i:i+k]))\n",
+    "    return kgram\n",
+    "\n",
+    "def Dk(gram_1,gram_2):\n",
+    "    intersection=gram_1.intersection(gram_2)\n",
+    "    union=gram_1.union(gram_2)\n",
+    "    return 1-(len(intersection)/len(union))\n",
+    "\n",
+    "def my_algo(x,y,k):\n",
+    "    x_gram=k_gram(x,k)\n",
+    "    y_gram=k_gram(y,k)\n",
+    "    return Dk(x_gram,y_gram)\n",
+    "\n",
+    "a=[2,3,4]\n",
+    "b=[1,2,3,4]\n",
+    "print(my_algo(a,b,3))"
    ]
   }
  ],
