time dis not complete

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -28,6 +28,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sys\n",
+    "import datetime\n",
     "from sklearn.metrics.pairwise import manhattan_distances"
    ]
   },
@@ -40,10 +41,22 @@
     "f=open('/Users/iamlira/Downloads/IOTest2.txt')\n",
     "data=f.read().splitlines()\n",
     "data_seq=[]\n",
+    "time_seq=[]\n",
     "for tmp in data:\n",
     "    d=tmp.split(' ')\n",
     "    d.remove('')\n",
     "    data_seq.append(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ds1='2018/9/4 21:46:19'\n",
+    "ds2='2018/9/4 21:46:22'\n",
+    "date = datetime.datetime.strptime(ds1,'%Y/%m/%d %X')\n",
+    "date1=datetime.datetime.strptime(ds2,'%Y/%m/%d %X')\n",
+    "print((date1-date)/2)"
    ]
   },
   {
@@ -126,9 +139,18 @@
     "        n=len(data)\n",
     "        i=i+1\n",
     "    \n",
+    "def generate_time_seq(data):\n",
+    "    for tmp in data:\n",
+    "        date_str=tmp[1]+' '+tmp[2]\n",
+    "        date = datetime.datetime.strptime(date_str,'%Y/%m/%d %X')\n",
+    "        time_seq.append(date)\n",
+    "    \n",
     "pre_data(data_seq)\n",
+    "generate_time_seq(data_seq)\n",
     "for s in data_seq:\n",
-    "    print(s)"
+    "    print(s)\n",
+    "#for t in time_seq:\n",
+    "#    print(t)"
    ]
   },
   {
@@ -284,6 +306,16 @@
     "    intersection=gram_1.intersection(gram_2)\n",
     "    union=gram_1.union(gram_2)\n",
     "    return 1-(len(intersection)/len(union))\n",
+    "\n",
+    "def event_time(data1_seq,t1_seq,data2_seq,t2_seq):\n",
+    "    pass\n",
+    "\n",
+    "def avg_time_dis(t1_seq,t2_seq):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "def Dt(t1_seq,t2_seq):\n",
+    "    pass\n",
     "\n",
     "def my_algo(x,y,k):\n",
     "    x_gram=k_gram(x,k)\n",
