--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -38,6 +38,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#定义可计算操作时间的用户操作集合\n",
+    "choose='choose'\n",
+    "connect='connect'\n",
+    "assign='assign'\n",
+    "move='move'\n",
+    "\n",
+    "behavior_list=[choose,connect,assign,move]\n",
+    "\n",
+    "def init_dic():\n",
+    "    result={choose:0,connect:0,assign:0,move:0}\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "f=open('/Users/iamlira/Downloads/IOTest2.txt')\n",
     "data=f.read().splitlines()\n",
     "data_seq=[]\n",
@@ -45,7 +64,8 @@
     "for tmp in data:\n",
     "    d=tmp.split(' ')\n",
     "    d.remove('')\n",
-    "    data_seq.append(d)"
+    "    data_seq.append(d)\n",
+    "#print(data_seq)"
    ]
   },
   {
@@ -56,18 +76,19 @@
     "ds2='2018/9/4 21:46:22'\n",
     "date = datetime.datetime.strptime(ds1,'%Y/%m/%d %X')\n",
     "date1=datetime.datetime.strptime(ds2,'%Y/%m/%d %X')\n",
-    "print((date1-date)/2)"
+    "print((date1-date).total_seconds())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject']\n",
       "['AddPou', '2018/9/4', '21:46:19']\n",
       "['choose_start', '2018/9/4', '21:46:45']\n",
       "['choose_end', '2018/9/4', '21:46:46']\n",
@@ -140,13 +161,34 @@
     "        i=i+1\n",
     "    \n",
     "def generate_time_seq(data):\n",
+    "    time_seq=[]\n",
     "    for tmp in data:\n",
     "        date_str=tmp[1]+' '+tmp[2]\n",
     "        date = datetime.datetime.strptime(date_str,'%Y/%m/%d %X')\n",
     "        time_seq.append(date)\n",
+    "    return time_seq\n",
+    "    \n",
+    "def compress_seq(data):\n",
+    "    com_seq=[]\n",
+    "    n=len(data)\n",
+    "    i=0\n",
+    "    index = -1\n",
+    "    while i<n:\n",
+    "        if(len(com_seq)==0 or data[i][0].find(com_seq[index]) == -1):\n",
+    "            if(data[i][0]=='choose_start' or data[i][0]=='choose_end'):\n",
+    "                com_seq.append('choose')\n",
+    "            elif(data[i][0]=='move_start' or data[i][0]=='move_end'):\n",
+    "                com_seq.append('move')\n",
+    "            else:\n",
+    "                com_seq.append(data[i][0])\n",
+    "            index+=1\n",
+    "        i+=1\n",
+    "    return com_seq\n",
     "    \n",
     "pre_data(data_seq)\n",
-    "generate_time_seq(data_seq)\n",
+    "time_seq=generate_time_seq(data_seq)\n",
+    "com_seq=compress_seq(data_seq)\n",
+    "print(com_seq)\n",
     "for s in data_seq:\n",
     "    print(s)\n",
     "#for t in time_seq:\n",
@@ -155,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,14 +325,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5\n"
+      "0.5\n",
+      "0.0\n"
      ]
     }
    ],
@@ -307,15 +350,56 @@
     "    union=gram_1.union(gram_2)\n",
     "    return 1-(len(intersection)/len(union))\n",
     "\n",
-    "def event_time(data1_seq,t1_seq,data2_seq,t2_seq):\n",
-    "    pass\n",
+    "def event_time(data1_seq,data2_seq):\n",
+    "    event_time_set1=init_dic()\n",
+    "    event_time_set2=init_dic()\n",
+    "    n1=len(data1_seq)\n",
+    "    n2=len(data2_seq)\n",
+    "    for i in range(n1):\n",
+    "        if(i+1<n1 and data1_seq[i]=='choose_start' and data1_seq[i+1]=='choose_end'):\n",
+    "            event_time_set1[choose]=event_time_set1[choose]+data1_seq[i+1][2]-data1_seq[i][2]\n",
+    "        if(i+1<n1 and data1_seq[i]=='move_start' and data1_seq[i+1]=='move_end'):\n",
+    "            event_time_set1[move]=event_time_set1[move]+data1_seq[i+1][2]-data1_seq[i][2]\n",
+    "        if(i+1<n1 and data1_seq[i]=='assign'):\n",
+    "            event_time_set1[assign]=event_time_set1[assign]+data1_seq[i+1][2]-data1_seq[i][2]\n",
+    "        if(i+1<n1 and data1_seq[i]=='connect'):\n",
+    "            event_time_set1[connect]=event_time_set1[connect]+data1_seq[i+1][2]-data1_seq[i][2]\n",
+    "        \n",
+    "    for i in range(n2):\n",
+    "        if(i+1<n2 and data2_seq[i]=='choose_start' and data2_seq[i+1]=='choose_end'):\n",
+    "            event_time_set2[choose]=event_time_set2[choose]+data2_seq[i+1][2]-data2_seq[i][2]\n",
+    "        if(i+1<n2 and data2_seq[i]=='move_start' and data2_seq[i+1]=='move_end'):\n",
+    "            event_time_set2[move]=event_time_set2[move]+data2_seq[i+1][2]-data2_seq[i][2]\n",
+    "        if(i+1<n2 and data2_seq[i]=='assign'):\n",
+    "            event_time_set2[assign]=event_time_set2[assign]+data2_seq[i+1][2]-data2_seq[i][2]\n",
+    "        if(i+1<n2 and data2_seq[i]=='connect'):\n",
+    "            event_time_set2[connect]=event_time_set2[connect]+data2_seq[i+1][2]-data2_seq[i][2]\n",
+    "            \n",
+    "    event_time_dis=0\n",
+    "    for tmp in behavior_list:\n",
+    "        if(max(event_time_set1[tmp],event_time_set2[tmp]) != 0):\n",
+    "            event_time_dis=event_time_dis+abs(event_time_set1[tmp]-event_time_set2[tmp])/max(event_time_set1[tmp],event_time_set2[tmp])\n",
+    "    event_time_dis=event_time_dis/len(behavior_list)\n",
+    "    return event_time_dis\n",
     "\n",
     "def avg_time_dis(t1_seq,t2_seq):\n",
-    "    pass\n",
+    "    t1_avg=0\n",
+    "    t2_avg=0\n",
+    "    avg_dis=0\n",
+    "    n1=len(t1_seq)\n",
+    "    n2=len(t2_seq)\n",
+    "    for i in range(n1-1):\n",
+    "        t1_avg=t1_avg+(t1_seq[i+1]-t1_seq[i]).total_seconds()\n",
+    "    t1_avg=t1_avg/(n1-1)\n",
+    "    for i in range(n2-1):\n",
+    "        t2_avg=t2_avg+(t2_seq[i+1]-t2_seq[i]).total_seconds()\n",
+    "    t2_avg=t2_avg/(n2-1)\n",
+    "    avg_dis=abs(t1_avg-t2_avg)/max(t1_avg,t2_avg)\n",
+    "    return avg_dis\n",
+    "    \n",
     "\n",
-    "\n",
-    "def Dt(t1_seq,t2_seq):\n",
-    "    pass\n",
+    "def Dt(data1_seq,t1_seq,data2_seq,t2_seq):\n",
+    "    return avg_time_dis(t1_seq,t2_seq)+event_time(data1_seq,data2_seq)\n",
     "\n",
     "def my_algo(x,y,k):\n",
     "    x_gram=k_gram(x,k)\n",
@@ -324,7 +408,8 @@
     "\n",
     "a=[2,3,4]\n",
     "b=[1,2,3,4]\n",
-    "print(my_algo(a,b,3))"
+    "print(my_algo(a,b,3))\n",
+    "print(Dt(data_seq,time_seq,data_seq,time_seq))"
    ]
   }
  ],
