almost done and add annotation

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "behavior_list=[choose,connect,assign,move]\n",
     "\n",
-    "def init_dic():\n",
+    "def init_dic(): #初始化可计算操作时间用户操作集合\n",
     "    result={choose:0,connect:0,assign:0,move:0}\n",
     "    return result"
    ]
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "def pre_data(data):\n",
+    "def pre_data(data): #平台记录代码有bug，这里需要对bug产生对数据进行处理\n",
     "    n=len(data)\n",
     "    i=0\n",
     "    while i<n:\n",
@@ -160,7 +160,7 @@
     "        n=len(data)\n",
     "        i=i+1\n",
     "    \n",
-    "def generate_time_seq(data):\n",
+    "def generate_time_seq(data): #把数据序列中对时间节点转换成date存入序列\n",
     "    time_seq=[]\n",
     "    for tmp in data:\n",
     "        date_str=tmp[1]+' '+tmp[2]\n",
@@ -168,12 +168,12 @@
     "        time_seq.append(date)\n",
     "    return time_seq\n",
     "    \n",
-    "def compress_seq(data):\n",
+    "def compress_seq(data): #论文中对操作序列进行压缩\n",
     "    com_seq=[]\n",
     "    n=len(data)\n",
     "    i=0\n",
     "    index = -1\n",
-    "    while i<n:\n",
+    "    while i<n: #如果操作序列中连续对操作一样，则合并成一个\n",
     "        if(len(com_seq)==0 or data[i][0].find(com_seq[index]) == -1):\n",
     "            if(data[i][0]=='choose_start' or data[i][0]=='choose_end'):\n",
     "                com_seq.append('choose')\n",
