--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -168,27 +168,8 @@
     "        time_seq.append(date)\n",
     "    return time_seq\n",
     "    \n",
-    "def compress_seq(data): #论文中对操作序列进行压缩\n",
-    "    com_seq=[]\n",
-    "    n=len(data)\n",
-    "    i=0\n",
-    "    index = -1\n",
-    "    while i<n: #如果操作序列中连续对操作一样，则合并成一个\n",
-    "        if(len(com_seq)==0 or data[i][0].find(com_seq[index]) == -1):\n",
-    "            if(data[i][0]=='choose_start' or data[i][0]=='choose_end'):\n",
-    "                com_seq.append('choose')\n",
-    "            elif(data[i][0]=='move_start' or data[i][0]=='move_end'):\n",
-    "                com_seq.append('move')\n",
-    "            else:\n",
-    "                com_seq.append(data[i][0])\n",
-    "            index+=1\n",
-    "        i+=1\n",
-    "    return com_seq\n",
-    "    \n",
     "pre_data(data_seq)\n",
     "time_seq=generate_time_seq(data_seq)\n",
-    "com_seq=compress_seq(data_seq)\n",
-    "print(com_seq)\n",
     "for s in data_seq:\n",
     "    print(s)\n",
     "#for t in time_seq:\n",
@@ -325,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -333,11 +314,30 @@
      "output_type": "stream",
      "text": [
       "0.5\n",
-      "0.0\n"
+      "0.0\n",
+      "['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject']\n"
      ]
     }
    ],
    "source": [
+    "def compress_seq(data): #论文中对操作序列进行压缩\n",
+    "    com_seq=[]\n",
+    "    n=len(data)\n",
+    "    i=0\n",
+    "    index = -1\n",
+    "    while i<n: #如果操作序列中连续对操作一样，则合并成一个\n",
+    "        if(len(com_seq)==0 or data[i][0].find(com_seq[index]) == -1):\n",
+    "            if(data[i][0]=='choose_start' or data[i][0]=='choose_end'):\n",
+    "                com_seq.append('choose')\n",
+    "            elif(data[i][0]=='move_start' or data[i][0]=='move_end'):\n",
+    "                com_seq.append('move')\n",
+    "            else:\n",
+    "                com_seq.append(data[i][0])\n",
+    "            index+=1\n",
+    "        i+=1\n",
+    "    return com_seq\n",
+    "\n",
+    "\n",
     "def k_gram(seq,k):\n",
     "    kgram=set()\n",
     "    n=len(seq)\n",
@@ -409,7 +409,10 @@
     "a=[2,3,4]\n",
     "b=[1,2,3,4]\n",
     "print(my_algo(a,b,3))\n",
-    "print(Dt(data_seq,time_seq,data_seq,time_seq))"
+    "print(Dt(data_seq,time_seq,data_seq,time_seq))\n",
+    "\n",
+    "com_seq=compress_seq(data_seq)\n",
+    "print(com_seq)"
    ]
   }
  ],
