--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -341,28 +341,28 @@
     "def k_gram(seq,k):\n",
     "    kgram=set()\n",
     "    n=len(seq)\n",
-    "    for i in range(n-k+1):\n",
+    "    for i in range(n-k+1): #获取连续k个序列的集合\n",
     "        kgram.add(tuple(seq[i:i+k]))\n",
     "    return kgram\n",
     "\n",
     "def Dk(gram_1,gram_2):\n",
     "    intersection=gram_1.intersection(gram_2)\n",
-    "    union=gram_1.union(gram_2)\n",
+    "    union=gram_1.union(gram_2) #取交集，再取并集，1-两者相除\n",
     "    return 1-(len(intersection)/len(union))\n",
     "\n",
-    "def event_time(data1_seq,data2_seq):\n",
+    "def event_time(data1_seq,data2_seq): #获得在各操作事件上的总时间和\n",
     "    event_time_set1=init_dic()\n",
     "    event_time_set2=init_dic()\n",
     "    n1=len(data1_seq)\n",
     "    n2=len(data2_seq)\n",
     "    for i in range(n1):\n",
-    "        if(i+1<n1 and data1_seq[i]=='choose_start' and data1_seq[i+1]=='choose_end'):\n",
+    "        if(i+1<n1 and data1_seq[i]=='choose_start' and data1_seq[i+1]=='choose_end'): #获得选择控件的时间和，用end-start\n",
     "            event_time_set1[choose]=event_time_set1[choose]+data1_seq[i+1][2]-data1_seq[i][2]\n",
-    "        if(i+1<n1 and data1_seq[i]=='move_start' and data1_seq[i+1]=='move_end'):\n",
+    "        if(i+1<n1 and data1_seq[i]=='move_start' and data1_seq[i+1]=='move_end'): #获得移动控件的时间和，用end-start\n",
     "            event_time_set1[move]=event_time_set1[move]+data1_seq[i+1][2]-data1_seq[i][2]\n",
-    "        if(i+1<n1 and data1_seq[i]=='assign'):\n",
+    "        if(i+1<n1 and data1_seq[i]=='assign'): #获取赋值的时间和，用assign操作后的时间值减去assign的\n",
     "            event_time_set1[assign]=event_time_set1[assign]+data1_seq[i+1][2]-data1_seq[i][2]\n",
-    "        if(i+1<n1 and data1_seq[i]=='connect'):\n",
+    "        if(i+1<n1 and data1_seq[i]=='connect'): #获取连线的时间和，用connect操作后的时间值减去connect的\n",
     "            event_time_set1[connect]=event_time_set1[connect]+data1_seq[i+1][2]-data1_seq[i][2]\n",
     "        \n",
     "    for i in range(n2):\n",
@@ -377,12 +377,12 @@
     "            \n",
     "    event_time_dis=0\n",
     "    for tmp in behavior_list:\n",
-    "        if(max(event_time_set1[tmp],event_time_set2[tmp]) != 0):\n",
+    "        if(max(event_time_set1[tmp],event_time_set2[tmp]) != 0): #计算两个序列各同个操作事件的事件差\n",
     "            event_time_dis=event_time_dis+abs(event_time_set1[tmp]-event_time_set2[tmp])/max(event_time_set1[tmp],event_time_set2[tmp])\n",
-    "    event_time_dis=event_time_dis/len(behavior_list)\n",
+    "    event_time_dis=event_time_dis/len(behavior_list) #取平均值\n",
     "    return event_time_dis\n",
     "\n",
-    "def avg_time_dis(t1_seq,t2_seq):\n",
+    "def avg_time_dis(t1_seq,t2_seq): #平均时间差值\n",
     "    t1_avg=0\n",
     "    t2_avg=0\n",
     "    avg_dis=0\n",
