cluster no complete

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -512,6 +512,20 @@
     "com_seq=compress_seq(data_seq)\n",
     "print(com_seq)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calc_similarity(data):\n",
+    "    pass\n",
+    "def hier_cluster(data):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
