use scipy.cluster.hierarchy to complete cluster

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -13,7 +13,8 @@
     "import sys\n",
     "import datetime\n",
     "import os\n",
-    "from sklearn.metrics.pairwise import manhattan_distances"
+    "from sklearn.metrics.pairwise import manhattan_distances\n",
+    "from scipy.cluster.hierarchy import dendrogram, linkage, fcluster"
    ]
   },
   {
@@ -515,14 +516,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calc_similarity(data):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "\n",
+    "def func(u, v):#直接获取距离矩阵\n",
+    "    v_list = list(v)\n",
+    "    pos_v = v_list.index(0.0)\n",
+    "    return u[pos_v]\n",
+    "\n",
+    "def get_cluster_indices(cluster_assignments):\n",
+    "    '''映射每一类至原数据索引\n",
+    "    \n",
+    "    Arguments:\n",
+    "        cluster_assignments 层次聚类后的结果\n",
+    "    \n",
+    "    Returns:\n",
+    "        [[idx1, idx2,..], [idx3]] -- 每一类下的索引\n",
+    "    '''\n",
+    "    n = cluster_assignments.max()\n",
+    "    indices = []\n",
+    "    for cluster_number in range(1, n + 1):\n",
+    "        indices.append(np.where(cluster_assignments == cluster_number)[0])\n",
+    "    \n",
+    "    return indices\n",
+    "\n",
+    "\n",
+    "def hierarchy_cluster(data,threshold, method='average'):\n",
+    "    '''层次聚类\n",
+    "    \n",
+    "    Arguments:\n",
+    "        data [[0, float, ...], [float, 0, ...]] -- 文档 i 和文档 j 的距离\n",
+    "    \n",
+    "    Keyword Arguments:\n",
+    "        method {str} -- [linkage的方式： single、complete、average、centroid、median、ward] (default: {'average'})\n",
+    "        threshold {float} -- 聚类簇之间的距离\n",
+    "    Return:\n",
+    "        cluster_number int -- 聚类个数\n",
+    "        cluster [[idx1, idx2,..], [idx3]] -- 每一类下的索引\n",
+    "    '''\n",
+    "    data = np.array(data)\n",
+    " \n",
+    "    Z = linkage(data, method=method , metric = func) #这里的method使用平均数，metric使用自定义的，表示直接从距离矩阵里拿距离\n",
+    "    cluster_assignments = fcluster(Z, t=threshold, criterion='distance')\n",
+    "    print(type(cluster_assignments))\n",
+    "    num_clusters = cluster_assignments.max()\n",
+    "    indices = get_cluster_indices(cluster_assignments)\n",
+    " \n",
+    "    return num_clusters, indices\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3]\n"
+      "<class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dope/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:43: ClusterWarning: scipy.cluster: The symmetric non-negative hollow observation matrix looks suspiciously like an uncondensed distance matrix\n"
      ]
     }
    ],
@@ -532,20 +599,28 @@
     "      [2,4,0,6],\n",
     "      [3,5,6,0]]\n",
     "\n",
-    "\n",
-    "def calc_similarity(data):\n",
-    "    pass\n",
-    "def hier_cluster(data,dis):\n",
-    "    n=len(data)\n",
-    "    i=len(data[0])\n",
-    "    cluster=[]\n",
-    "    for i in range(n):\n",
-    "        cluster.append(i)\n",
-    "    for row in data:\n",
-    "        for col in row:\n",
-    "            \n",
-    "    return cluster\n",
-    "print(hier_cluster(test,1))"
+    "num_clusters, indices = hierarchy_cluster(test,threshold=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 clusters\n",
+      "cluster 1 is [0 1 2]\n",
+      "cluster 2 is [3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"%d clusters\" % num_clusters)\n",
+    "for k, ind in enumerate(indices):\n",
+    "    print(\"cluster\", k + 1, \"is\", ind)"
    ]
   }
  ],
