--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -14,7 +14,9 @@
     "import datetime\n",
     "import os\n",
     "from sklearn.metrics.pairwise import manhattan_distances\n",
-    "from scipy.cluster.hierarchy import dendrogram, linkage, fcluster"
+    "from scipy.cluster.hierarchy import dendrogram, linkage, fcluster\n",
+    "import operator  \n",
+    "from functools import reduce"
    ]
   },
   {
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +235,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "BCBA\n"
+      "0.4285714285714286\n",
+      "\n"
      ]
     }
    ],
@@ -267,29 +270,35 @@
     "      else:\n",
     "        c[i+1][j+1]=c[i][j+1]\n",
     "        flag[i+1][j+1]='up'\n",
-    "  return c,flag\n",
+    "  return flag,c\n",
     "\n",
-    "def printLcs(flag,a,i,j):\n",
+    "def printLcs(flag,a,i,j,result):\n",
     "  if i==0 or j==0:\n",
     "    return\n",
     "  if flag[i][j]=='ok':\n",
-    "    printLcs(flag,a,i-1,j-1)\n",
-    "    print(a[i-1],end='')\n",
+    "    printLcs(flag,a,i-1,j-1,result)\n",
+    "    result.append(a[i-1])\n",
+    "    #print(a[i-1],end='')\n",
     "  elif flag[i][j]=='left':\n",
-    "    printLcs(flag,a,i,j-1)\n",
+    "    printLcs(flag,a,i,j-1,result)\n",
     "  else:\n",
-    "    printLcs(flag,a,i-1,j)\n",
+    "    printLcs(flag,a,i-1,j,result)\n",
     "    \n",
+    "def lcs_dis(a,b):\n",
+    "    flag,c = lcs(a,b)\n",
+    "    result=[]\n",
+    "    printLcs(flag,a,len(a),len(b),result)\n",
+    "    return 1-len(''.join(result))/max(len(a),len(b))\n",
+    "\n",
     "a='ABCBDAB'\n",
     "b='BDCABA'\n",
-    "c,flag=lcs(a,b)\n",
     "#for i in c:\n",
     "#  print(i)\n",
     "#print('')\n",
     "#for j in flag:\n",
     "#  print(j)\n",
     "print('')\n",
-    "printLcs(flag,a,len(a),len(b))\n",
+    "print(lcs_dis(a,b))\n",
     "print('')"
    ]
   },
@@ -317,19 +326,19 @@
     "\n",
     "\n",
     "def dtw(X,Y):\n",
-    "     M=[[manhattan_distances(X[i],Y[i]) for i in range(len(X))] for j in range(len(Y))]\n",
-    "     l1=len(X)\n",
-    "     l2=len(Y) \n",
-    "     D=[[0 for i in range(l1+1)] for i in range(l2+1)]\n",
-    "     D[0][0]=0 \n",
-    "     for i in range(1,l1+1):\n",
-    "         D[0][i]=sys.maxsize\n",
-    "     for j in range(1,l2+1):\n",
-    "         D[j][0]=sys.maxsize\n",
-    "     for j in range(1,l2+1):\n",
-    "         for i in range(1,l1+1):\n",
-    "             D[j][i]=M[j-1][i-1]+min(D[j-1][i],D[j][i-1],D[j-1][i-1]+M[j-1][i-1])\n",
-    "     print(D[-1][-1])"
+    "    M=[[manhattan_distances(X[i],Y[i]) for i in range(len(X))] for j in range(len(Y))]\n",
+    "    l1=len(X)\n",
+    "    l2=len(Y) \n",
+    "    D=[[0 for i in range(l1+1)] for i in range(l2+1)]\n",
+    "    D[0][0]=0 \n",
+    "    for i in range(1,l1+1):\n",
+    "        D[0][i]=sys.maxsize\n",
+    "    for j in range(1,l2+1):\n",
+    "        D[j][0]=sys.maxsize\n",
+    "    for j in range(1,l2+1):\n",
+    "        for i in range(1,l1+1):\n",
+    "            D[j][i]=M[j-1][i-1]+min(D[j-1][i],D[j][i-1],D[j-1][i-1]+M[j-1][i-1])\n",
+    "    return D[-1][-1][-1][-1]"
    ]
   },
   {
@@ -341,14 +350,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.]]\n"
+      "1.0\n"
      ]
     }
    ],
    "source": [
     "X=[1,2,3,4]\n",
     "Y=[1,3,3,4,5]\n",
-    "dtw(X,Y)"
+    "e=dtw(X,Y)\n",
+    "print(e)"
    ]
   },
   {
@@ -516,16 +526,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "pre_list=[pre4lcs,pre4dtw,pre4edit]\n",
+    "func_list=[lcs_dis,dtw,edit_distance]\n",
+    "\n",
+    "\n",
+    "def twotwo_calc(data,func):\n",
+    "    data=reduce(operator.add, data)#把所有序列转换成一维，两两计算序列之间的相似度\n",
+    "    simi_matrix=[]\n",
+    "    n=len(data)\n",
+    "    for i in range(n):\n",
+    "        simi_tmp=[]\n",
+    "        for j in range(n):\n",
+    "            simi_tmp.append(func(data[i],data[j]))\n",
+    "        simi_matrix.append(simi_tmp)\n",
+    "    return simi_matrix\n",
+    "\n",
     "def calc_similarity(data):\n",
-    "    pass\n",
-    "\n",
-    "\n",
+    "    n=len(func_list)\n",
+    "    for i in range(n):\n",
+    "        data_tmp=pre_list[i](data)\n",
+    "        print(twotwo_calc(data_tmp,func_list[i]))\n",
     "\n",
     "def func(u, v):#直接获取距离矩阵\n",
     "    v_list = list(v)\n",
@@ -575,48 +601,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dope/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:43: ClusterWarning: scipy.cluster: The symmetric non-negative hollow observation matrix looks suspiciously like an uncondensed distance matrix\n"
+      "[[0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0]]\n",
+      "[[0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0]]\n",
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
      ]
     }
    ],
+   "source": [
+    "calc_similarity(user_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "test=[[0,1,2,3],\n",
     "      [1,0,4,5],\n",
     "      [2,4,0,6],\n",
     "      [3,5,6,0]]\n",
     "\n",
-    "num_clusters, indices = hierarchy_cluster(test,threshold=3)"
+    "num_clusters, indices = hierarchy_cluster(test,threshold=2.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 clusters\n",
-      "cluster 1 is [0 1 2]\n",
-      "cluster 2 is [3]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "print(\"%d clusters\" % num_clusters)\n",
     "for k, ind in enumerate(indices):\n",
