--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -406,25 +406,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'data_seq' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-afff45c87423>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_algo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_seq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtime_seq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_seq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtime_seq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0mcom_seq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcompress_seq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_seq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data_seq' is not defined"
+      "[[['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject'], ['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject']], [['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject'], ['AddPou', 'choose', 'connect', 'assign', 'move', 'assign', 'move', 'assign', 'SaveProject']]]\n",
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
@@ -445,6 +436,16 @@
     "            index+=1\n",
     "        i+=1\n",
     "    return com_seq\n",
+    "\n",
+    "\n",
+    "def pre4myalgo(data):\n",
+    "    user_list_seq=[]\n",
+    "    for user in data:\n",
+    "        user_tmp=[]\n",
+    "        for seq_list in user:\n",
+    "            user_tmp.append(compress_seq(seq_list))\n",
+    "        user_list_seq.append(user_tmp)\n",
+    "    return user_list_seq\n",
     "\n",
     "\n",
     "def k_gram(seq,k):\n",
@@ -517,16 +518,16 @@
     "\n",
     "a=[2,3,4]\n",
     "b=[1,2,3,4]\n",
-    "print(my_algo(a,b,3))\n",
-    "print(Dt(data_seq,time_seq,data_seq,time_seq))\n",
-    "\n",
-    "com_seq=compress_seq(data_seq)\n",
-    "print(com_seq)"
+    "#print(my_algo(a,b,3))\n",
+    "print(pre4myalgo(user_list))\n",
+    "tt=pre4myalgo(user_list)\n",
+    "print(my_algo(tt[0][0],tt[1][0],3))\n",
+    "print(Dt(user_list[0][1],user_time_list[0][1],user_list[0][0],user_time_list[0][0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -601,19 +602,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0]]\n",
-      "[[0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0]]\n",
-      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "calc_similarity(user_list)"
    ]
